# xutex

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: allocator.rs  backoff.rs  lib.rs  reentrant.rs  signal_queue.rs  tests.rs  waker.rs
